fix spacing of html elements for UI

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
 
 form {
   background-color: #fff;
-  height: 350px;
   padding: 40px;
   border-radius: 15px;
 }
